--- a/charts/secret-generator/Chart.yaml
+++ b/charts/secret-generator/Chart.yaml
@@ -3,7 +3,7 @@ name: secret-generator
 description: A Helm chart for generating secrets
 
 maintainers:
-  - name: Loc B.Mai
+  - name: Loc Mai
     url: https://maibaloc.com
 # A chart can be either an 'application' or a 'library' chart.
 #
