fix(temporal): update URL

--- a/charts/temporal/Chart.yaml
+++ b/charts/temporal/Chart.yaml
@@ -16,7 +16,7 @@ keywords:
 maintainers:
   - name: Temporal Technologies Inc.
     url: https://temporal.io/
-  - name: Loc Mai
+  - name: Loc B Mai
     url: https://maibaloc.com
 
 sources:
