--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,4 +31,4 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io/locmai --username locmai --password-stdin
           helm dependency build ./charts/${{ steps.get_chart_name.outputs.chart_name }}
           helm package ./charts/${{ steps.get_chart_name.outputs.chart_name }}
-          helm push ./charts/${{ steps.get_chart_name.outputs.chart_name }}-${{ steps.get_chart_name.outputs.version }}.tgz oci://ghcr.io/locmai
+          helm push ${{ steps.get_chart_name.outputs.chart_name }}-${{ steps.get_chart_name.outputs.version }}.tgz oci://ghcr.io/locmai
