fix(secret-generator): update description

--- a/charts/secret-generator/Chart.yaml
+++ b/charts/secret-generator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: secret-generator
-description: A Helm chart for generating secrets for homelab
+description: A Helm chart for generating secrets
 
 maintainers:
   - name: Loc Mai
