--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,7 +28,7 @@ jobs:
           echo "version=$version" >> "$GITHUB_OUTPUT"
       - name: Publish
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io/locmai --username locmai --password-stdin
+          echo ${{ secrets.CR_TOKEN }} | helm registry login ghcr.io/locmai --username locmai --password-stdin
           helm dependency build ./charts/${{ steps.get_chart_name.outputs.chart_name }}
           helm package ./charts/${{ steps.get_chart_name.outputs.chart_name }}
           helm push ${{ steps.get_chart_name.outputs.chart_name }}-${{ steps.get_chart_name.outputs.version }}.tgz oci://ghcr.io/locmai
