feat(glance): initialize glance Helm chart

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,6 +7,9 @@
     },
     "charts/temporal": {
       "component": "temporal"
+    },
+    "charts/glance": {
+      "components": "glance"
     }
   }
 }
