--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,6 @@
 {
   "charts/secret-generators": "0.1.3",
   "charts/temporal": "0.32.12",
-  "charts/secret-generator": "0.1.10"
+  "charts/secret-generator": "0.1.10",
+  "charts/glance": "0.1.0"
 }
